I have an issue with the Nav bar not showing up on the mobile use and having issues with fixing projects to one size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,32 +65,37 @@ skills {
     margin-top:06px;
 }
 
-#Projects span {
+#projects span {
     padding: 10px 20px 10px 20px;
 }
 
-#Projects hr {
+#projects hr {
     border-width:2px;
     margin-top:06px;
 }
 
-#Projects .card {
+#projects .card {
     border-top: 05px;
    
 }
 
-Contact {
+#projects img {
+    width: 100px;
+    height: 100%;
+}
+
+contact {
     background-image: url("../images/program.jpg"); 
     background-size: 5%;
     background-repeat: none;
     min-height: 500px;
     }
 
-#Contact span {
+#contact span {
     padding: 10px 20px 10px 20px;
 }
 
-#Contact hr {
+#contact hr {
     border-width: 2px;
     margin-top:06px;
 }
